--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JetpackComposeExample">
         <activity
+            android:name=".ui.view.flutterCounter.FlutterCounterActivity"
+            android:exported="true"
+            android:theme="@style/Theme.JetpackComposeExample.NoActionBar" />
+        <activity
             android:name=".ui.view.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
