--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
             android:exported="true"
             android:theme="@style/Theme.JetpackComposeExample.NoActionBar" />
         <activity
+            android:name=".ui.view.cleaning_app.CleaningAppActivity"
+            android:exported="true"
+            android:theme="@style/Theme.JetpackComposeExample.NoActionBar" />
+        <activity
             android:name=".ui.view.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
